samples/_failures_safe/1761532168_4dd05e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0a359c5.c: In function ‘main’:
./samples/SAFE/__tmp_d0a359c5.c:168:13: error: expected declaration or statement at end of input
  168 |             case TOKEN_UNKNOWN:
      |             ^~~~
./samples/SAFE/__tmp_d0a359c5.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0a359c5.c:168:13: error: expected declaration or statement at end of input
